--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ table {
 html, body {
     height: 100%;
     overflow: hidden;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .hide {
     display: none;
@@ -66,13 +67,25 @@ html, body {
     bottom: 10px;
 }
 
+.container {
+    height: 100%;
+    width: 300px;
+    margin: 0 auto;
+}
+
 .score {
 }
 .game {
     height: 100%;
 }
 .game__start {
-    border: 1px solid salmon;
+    position: relative;
+    margin: auto;
+    background-color: #000;
+    color: #fff;
+    font-size: 30px;
+    line-height: 60px;
+    font-weight: 600;
     text-align: center;
 }
 .game__area { 
