--- a/css/styles.css
+++ b/css/styles.css
@@ -73,24 +73,29 @@ html, body {
     margin: 0 auto;
 }
 
-.score {
-}
+
 .game {
     height: 100%;
 }
-.game__start {
-    position: relative;
-    margin: auto;
+
+.game--text {
     background-color: #000;
-    color: #fff;
-    font-size: 30px;
-    line-height: 60px;
+    color: whitesmoke;
     font-weight: 600;
     text-align: center;
 }
+.game__score {
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.game__start {
+    border-top: 2px solid #555 ;
+    font-size: 30px;
+    line-height: 60px;
+}
 .game__area { 
     overflow: hidden;
-    width: 300px;
     height: 100%;
     position: relative;
     margin: auto;
